[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/boss_pig.png" type="Texture" id=1]
[ext_resource path="res://Src/Enemies/PigBoss.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/weapons.png" type="Texture" id=3]

[sub_resource type="Animation" id=8]
resource_name = "Die"
length = 2.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.39, 0.44, 0.48, 0.59, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16.2941, -34.8356 ), Vector2( 19.1034, -9.739 ), Vector2( 27.1381, 17.7924 ), Vector2( 32.7567, -4.6822 ), Vector2( 36.3152, -11.4246 ), Vector2( 43.6195, 21.3509 ), Vector2( 120.408, 21.3509 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 2, 2.08 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 370.0, 360.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "really_dead"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleNaked"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 2, 0 ), Vector2( 3, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "RipShirt"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.65757, -3.91851, 2.17812, 1.65757, -3.91851, 1.65757, -3.91851, 2.17812, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_phase2"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "WalkClothes"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 3, 2 ), Vector2( 4, 2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "WalkNaked"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 3 ), Vector2( 1, 3 ), Vector2( 2, 3 ), Vector2( 3, 3 ), Vector2( 4, 3 ), Vector2( 0, 2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Shoot"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -35.0859, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 19.7149 )

[node name="PigBoss" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 1 )
vframes = 4
hframes = 6
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Die = SubResource( 8 )
anims/Idle = SubResource( 4 )
anims/IdleNaked = SubResource( 7 )
anims/RipShirt = SubResource( 3 )
anims/WalkClothes = SubResource( 1 )
anims/WalkNaked = SubResource( 2 )

[node name="Gatling" type="Sprite" parent="."]
position = Vector2( -1.67922, 12.4156 )
rotation = -0.00802922
texture = ExtResource( 3 )
offset = Vector2( -0.182232, 5.39775 )
vframes = 3
hframes = 5
frame = 1

[node name="Head" type="Node2D" parent="Gatling"]
position = Vector2( 26.3669, 1.47452 )

[node name="Bazooka" type="Sprite" parent="."]
visible = false
position = Vector2( -1.53892, 16.2039 )
texture = ExtResource( 3 )
offset = Vector2( -0.601254, -0.926419 )
vframes = 3
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bazooka"]
anims/Shoot = SubResource( 5 )

[node name="Head" type="Node2D" parent="Bazooka"]
position = Vector2( 19.2222, -0.701538 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.36739, 8.9797 )
shape = SubResource( 6 )

[node name="ComputeDirectionTimer" type="Timer" parent="."]
autostart = true

[node name="Phase1ShootTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Phase1WaitTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="ComputeDirectionTimer" to="." method="_on_ComputeDirectionTimer_timeout"]
[connection signal="timeout" from="Phase1ShootTimer" to="." method="_on_Phase1ShootTimer_timeout"]
[connection signal="timeout" from="Phase1WaitTimer" to="." method="_on_Phase1WaitTimer_timeout"]
